--- a/Friday.ERP.Client/Pages/Inventory/Dialogs/InventoryCategoryDialog.razor
+++ b/Friday.ERP.Client/Pages/Inventory/Dialogs/InventoryCategoryDialog.razor
@@ -17,7 +17,7 @@
                 </CustomLabelAndInput>
                 <CustomLabelAndStringField FirstText="Category Name" @bind-BindValue="@CategoryName" Required="@(!IsUpdate)"/>
             </MudGrid>
-            <MudDivider DividerType="DividerType.FullWidth" Class="mt-4"></MudDivider>
+            <MudDivider DividerType="DividerType.FullWidth" Class="mt-4"/>
         </MudForm>
     </DialogContent>
     <DialogActions>
