--- a/Friday.ERP.Client/Pages/Invoice/Dialogs/TransactionDeliveryDialog.razor
+++ b/Friday.ERP.Client/Pages/Invoice/Dialogs/TransactionDeliveryDialog.razor
@@ -1,25 +1,25 @@
 ﻿<MudDialog>
     <DialogContent>
         <MudGrid Spacing="2">
-            <CustomLabelAndLabel FirstText="Address" SecondText="@Address"></CustomLabelAndLabel>
-            <CustomLabelAndLabel FirstText="Contact Person" SecondText="@ContactPerson"></CustomLabelAndLabel>
-            <CustomLabelAndLabel FirstText="Contact Phone" SecondText="@ContactPhone"></CustomLabelAndLabel>
+            <CustomLabelAndLabel FirstText="Address" SecondText="@Address"/>
+            <CustomLabelAndLabel FirstText="Contact Person" SecondText="@ContactPerson"/>
+            <CustomLabelAndLabel FirstText="Contact Phone" SecondText="@ContactPhone"/>
         </MudGrid>
-        <MudDivider DividerType="DividerType.FullWidth" Class="my-4"></MudDivider>
+        <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
         <MudGrid Spacing="2">
-            <CustomLabelAndLabel FirstText="Delivery Service Name" SecondText="@DeliveryServiceName"></CustomLabelAndLabel>
-            <CustomLabelAndLabel FirstText="Contact Person" SecondText="@DeliveryContactPerson"></CustomLabelAndLabel>
-            <CustomLabelAndLabel FirstText="Contact Phone" SecondText="@DeliveryContactPhone"></CustomLabelAndLabel>
+            <CustomLabelAndLabel FirstText="Delivery Service Name" SecondText="@DeliveryServiceName"/>
+            <CustomLabelAndLabel FirstText="Contact Person" SecondText="@DeliveryContactPerson"/>
+            <CustomLabelAndLabel FirstText="Contact Phone" SecondText="@DeliveryContactPhone"/>
         </MudGrid>
-        <MudDivider DividerType="DividerType.FullWidth" Class="my-4"></MudDivider>
+        <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
         <MudGrid Spacing="2">
-            <CustomLabelAndLabel FirstText="Remark" SecondText="@Remark"></CustomLabelAndLabel>
-            <CustomLabelAndLabel FirstText="Delivery Fees" SecondText="@DeliveryFees.ToString()"></CustomLabelAndLabel>
+            <CustomLabelAndLabel FirstText="Remark" SecondText="@Remark"/>
+            <CustomLabelAndLabel FirstText="Delivery Fees" SecondText="@DeliveryFees.ToString()"/>
         </MudGrid>
-        <MudDivider DividerType="DividerType.FullWidth" Class="mt-4"></MudDivider>
+        <MudDivider DividerType="DividerType.FullWidth" Class="mt-4"/>
     </DialogContent>
     <DialogActions>
-        <CustomButton OnClick="@Back" Color="Color.Default" Variant="Variant.Text" FullWidth="false">Back</CustomButton>
+        <CustomButton Label="Back" OnClick="@Back" Color="Color.Default" Variant="Variant.Text" FullWidth="false"/>
     </DialogActions>
 </MudDialog>
 
