--- a/Friday.ERP.Client/Pages/Purchase/Index.razor
+++ b/Friday.ERP.Client/Pages/Purchase/Index.razor
@@ -1,11 +1,11 @@
 ﻿@page "/purchase"
-@using Friday.ERP.Client.Pages.Purchase.Dialogs
-@using Friday.ERP.Client.Pages.Purchase.Components.Templates
+@using Friday.ERP.Shared.DataTransferObjects
+@using Friday.ERP.Client.Data
 @using Friday.ERP.Client.Pages.Inventory.Components.Moledules
 @using Friday.ERP.Client.Pages.Inventory.Components.Templates
-@using Friday.ERP.Client.Data
+@using Friday.ERP.Client.Pages.Purchase.Components.Templates
+@using Friday.ERP.Client.Pages.Purchase.Dialogs
 @using Friday.ERP.Client.Shared.Layouts
-@using Friday.ERP.Shared.DataTransferObjects
 
 @inject NavigationManager NavManager
 @inject IHttpRepository HttpRepo
@@ -32,8 +32,7 @@
                                        ProductCode="@product.Code"
                                        ProductImageSrc="@(product.Image is not null ? $"data:image/png;base64, {product.Image!}" : "product_png/placeholder.png")"
                                        ProductTotalStock="@product.TotalStockLeft"
-                                       ProductName="@product.Name">
-                        </CustomCardBox>
+                                       ProductName="@product.Name"/>
                     </MudItem>
                 }
             </ChildContent>
@@ -41,10 +40,10 @@
     </CustomPage>
     <CustomPage Sm="12" Md="5" IsLoading="@_isMainLoading">
         <MudGrid Spacing="2">
-            <CustomLabelAndLabel FirstText="Invoice" SecondText="@_invoiceNo" SecondTextAlign="Align.End"></CustomLabelAndLabel>
-            <CustomLabelAndLabel FirstText="Date & Time" SecondText="@(DateTime.Now.ToString("d"))" SecondTextAlign="Align.End"></CustomLabelAndLabel>
+            <CustomLabelAndLabel FirstText="Invoice" SecondText="@_invoiceNo" SecondTextAlign="Align.End"/>
+            <CustomLabelAndLabel FirstText="Date & Time" SecondText="@(DateTime.Now.ToString("d"))" SecondTextAlign="Align.End"/>
         </MudGrid>
-        <MudDivider DividerType="DividerType.FullWidth" Class="my-4"></MudDivider>
+        <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
         <MudGrid Spacing="2" Justify="Justify.FlexStart" Style="overflow-y: auto;height: 100%;align-content: baseline;">
             @if (_productsInCartTemp.Count == 0)
             {
@@ -65,24 +64,23 @@
                                              FirstMainText="@product.Name" FirstSubText="@product.Quantity.ToString()"
                                              ImageSrc="@(product.Image is not null ? $"data:image/png;base64, {product.Image!}" : "product_png/placeholder.png")"
                                              SecondMainText="@product.BuyPrice.ToString()"
-                                             SecondSubText="@(product.TotalPrice.ToString())">
-                        </CustomCardRectangle>
+                                             SecondSubText="@(product.TotalPrice.ToString())"/>
                     </MudItem>
                 }
             }
         </MudGrid>
-        <MudDivider DividerType="DividerType.FullWidth" Class="my-4"></MudDivider>
+        <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
         <MudGrid Spacing="2">
             <CustomLableAndAutocomplete FirstText="Vendor" Required="true"
                                         Value="@_customerVendorName" SearchFuncWithCancel="@CustomerVendorSearch"
                                         ValueChanged="@CustomerVendorChange"
                                         OnClearButtonClick="@CustomerVendorClear"/>
         </MudGrid>
-        <MudDivider DividerType="DividerType.FullWidth" Class="my-4"></MudDivider>
+        <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
         <MudGrid Spacing="2">
-            <CustomLabelAndLabel FirstText="Subtotal" SecondText="@($"{SubTotal} mmk")" SecondTextAlign="Align.End"></CustomLabelAndLabel>
+            <CustomLabelAndLabel FirstText="Subtotal" SecondText="@($"{SubTotal} mmk")" SecondTextAlign="Align.End"/>
         </MudGrid>
-        <MudDivider DividerType="DividerType.FullWidth" Class="my-4"></MudDivider>
+        <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
         <MudGrid Spacing="2">
             <MudItem sm="12" md="12" lg="12">
                 <CustomButton
