--- a/Friday.ERP.Client/Pages/Sale/Dialogs/SaleTransactionDeliveryDialog.razor
+++ b/Friday.ERP.Client/Pages/Sale/Dialogs/SaleTransactionDeliveryDialog.razor
@@ -8,17 +8,17 @@
                 <CustomLabelAndStringField FirstText="Contact Phone" @bind-BindValue="@ContactPhone" Required="true"/>
 
             </MudGrid>
-            <MudDivider DividerType="DividerType.FullWidth" Class="my-4"></MudDivider>
+            <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
             <MudGrid Spacing="2">
                 <CustomLabelAndStringField FirstText="Delivery Service Name" @bind-BindValue="@DeliveryServiceName"/>
                 <CustomLabelAndStringField FirstText="Contact Person" @bind-BindValue="@DeliveryServiceContactPerson"/>
                 <CustomLabelAndStringField FirstText="Contact Phone" @bind-BindValue="@DeliveryServiceContactPhone"/>
             </MudGrid>
-            <MudDivider DividerType="DividerType.FullWidth" Class="my-4"></MudDivider>
+            <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
             <MudGrid Spacing="2">
                 <CustomLabelAndStringField FirstText="Remark" @bind-BindValue="@Remark"/>
             </MudGrid>
-            <MudDivider DividerType="DividerType.FullWidth" Class="mt-4"></MudDivider>
+            <MudDivider DividerType="DividerType.FullWidth" Class="mt-4"/>
         </MudForm>
     </DialogContent>
     <DialogActions>
