--- a/Friday.ERP.Client/Shared/Components/Molecules/CustomLabelAndLongField.razor
+++ b/Friday.ERP.Client/Shared/Components/Molecules/CustomLabelAndLongField.razor
@@ -2,9 +2,8 @@
     <MudItem sm="SecondSm" md="@SecondMd" Class="align-self-center">
         <MudTextField T="long" @bind-Value="@BindValue" Required="@Required" Immediate="true"
                       FullWidth="true" InputType="@KeyboardInputType"
-                      a
-                      Margin="Margin.Dense" Variant="Variant.Outlined">
-        </MudTextField>
+                      Margin="Margin.Dense" Variant="Variant.Outlined"/>
+        
     </MudItem>
 </CustomLabelAndInput>
 
