--- a/Friday.ERP.Client/Shared/Components/Molecules/CustomTextFieldWithIcon.razor
+++ b/Friday.ERP.Client/Shared/Components/Molecules/CustomTextFieldWithIcon.razor
@@ -1,7 +1,6 @@
 <MudTextField T="string" Value="BindValue" ValueChanged="@ValueChanged" Immediate="true"
               Class="@ClassParameter" AdornmentIcon="@Icon" Label="@Label" Adornment="Adornment.End"
-              Variant="Variant.Outlined" Margin="Margin.Dense" FullWidth="@FullWidth">
-</MudTextField>
+              Variant="Variant.Outlined" Margin="Margin.Dense" FullWidth="@FullWidth"/>
 
 @code {
 
