--- a/Friday.ERP.Client/Shared/Layouts/MainComponents/NotificationBox.razor
+++ b/Friday.ERP.Client/Shared/Layouts/MainComponents/NotificationBox.razor
@@ -53,7 +53,7 @@
                 </div>
                 <MudText Typo="@Typo.subtitle2" Style="font-weight:lighter">@notification.Body</MudText>
             </MudMenuItem>
-            <MudDivider Class="my-2"></MudDivider>
+            <MudDivider Class="my-2"/>
         }
     }
 </MudContainer>
