--- a/Friday.ERP.Client/Pages/Inventory/Dialogs/InventoryPriceCreateDialog.razor
+++ b/Friday.ERP.Client/Pages/Inventory/Dialogs/InventoryPriceCreateDialog.razor
@@ -38,7 +38,7 @@
                     </MudItem>
                 </CustomLabelAndInput>
             </MudGrid>
-            <MudDivider DividerType="DividerType.FullWidth" Class="my-4"></MudDivider>
+            <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
             <MudText Typo="Typo.subtitle1">
                 <b>Create New Price</b>
             </MudText>
@@ -46,11 +46,11 @@
                 <MudGrid Spacing="2" Class="mt-4">
                     <CustomLabelAndInput FirstText="Is Wholesale">
                         <MudItem sm="7" md="7" lg="7" Class="align-self-center">
-                            <MudCheckBox T="bool" ValueChanged="@IsWholeSaleValueChanged" Color="Color.Default"></MudCheckBox>
+                            <MudCheckBox T="bool" ValueChanged="@IsWholeSaleValueChanged" Color="Color.Default"/>
                         </MudItem>
                     </CustomLabelAndInput>
                 </MudGrid>
-                <MudDivider DividerType="DividerType.FullWidth" Class="my-4"></MudDivider>
+                <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
                 <MudGrid Spacing="2">
                     <MudItem sm="5" md="5" lg="5" Class="align-self-start">
                         <MudText Class="mt-3" Typo="@Typo.body1">
@@ -69,7 +69,7 @@
                                        OnClick="@CreatePrice" Color="Color.Primary" Size="Size.Medium"/>
                     </MudItem>
                 </MudGrid>
-                <MudDivider DividerType="DividerType.FullWidth" Class="mt-4"></MudDivider>
+                <MudDivider DividerType="DividerType.FullWidth" Class="mt-4"/>
             </MudForm>
         </DialogContent>
         <DialogActions>
@@ -122,7 +122,7 @@
         _isMainLoading = false;
         StateHasChanged();
     }
-    
+
     void IsWholeSaleValueChanged(bool value)
     {
         IsWholesale = value;
@@ -197,7 +197,7 @@
     {
         _isLoading = true;
         StateHasChanged();
-        
+
         var selectedPriceGuid = _oldPrices
             .Where(c => c.SalePrice == long.Parse(SelectedPrice!))
             .Select(c => c.Guid)
@@ -211,8 +211,9 @@
             Snackbar.Add("Price Deleted!", Severity.Success);
             await GetProductPrices();
         }
-        
+
         _isLoading = false;
         StateHasChanged();
     }
+
 }
