--- a/Friday.ERP.Client/Pages/Purchase/Dialogs/PurchaseTransactionDialog.razor
+++ b/Friday.ERP.Client/Pages/Purchase/Dialogs/PurchaseTransactionDialog.razor
@@ -1,19 +1,17 @@
 @using Friday.ERP.Shared.Enums
 @using Friday.ERP.Shared.DataTransferObjects
-
 <MudDialog>
     <DialogContent>
         <MudGrid Spacing="2">
-            <CustomLabelAndLabel FirstText="Invoice No." SecondText="@InvoiceNo"></CustomLabelAndLabel>
-            <CustomLabelAndLabel FirstText="Vendor" SecondText="@VendorName"></CustomLabelAndLabel>
+            <CustomLabelAndLabel FirstText="Invoice No." SecondText="@InvoiceNo"/>
+            <CustomLabelAndLabel FirstText="Vendor" SecondText="@VendorName"/>
             <CustomLabelAndLabel FirstText="Existing Credit / Debit"
                                  SecondTextColor="@(VendorExistingCreditDebit < 0 ? Color.Error : Color.Dark)"
-                                 SecondText="@_vendorExistingCreditDebitString">
-            </CustomLabelAndLabel>
+                                 SecondText="@_vendorExistingCreditDebitString"/>
         </MudGrid>
-        <MudDivider DividerType="DividerType.FullWidth" Class="my-4"></MudDivider>
+        <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
         <MudGrid Spacing="2">
-            <CustomLabelAndLabel FirstText="Subtotal" SecondText="@($"{SubTotal.ToString()} mmk")"></CustomLabelAndLabel>
+            <CustomLabelAndLabel FirstText="Subtotal" SecondText="@($"{SubTotal.ToString()} mmk")"/>
             @* Todo *@
             <CustomLabelAndInput FirstText="Discount">
                 <MudItem sm="3" md="3" lg="3" Class="align-self-center">
@@ -27,45 +25,41 @@
                     </MudSelect>
                 </MudItem>
                 <MudItem sm="4" md="4" lg="4" Class="align-self-center">
-                    <MudTextField T="long" ValueChanged="@((e) => DiscountOrDeliveryFeesValueChanged(e, true))"
+                    <MudTextField T="long" ValueChanged="@(e => DiscountOrDeliveryFeesValueChanged(e, true))"
                                   Immediate="true"
                                   FullWidth="true"
                                   Margin="Margin.Dense"
-                                  Variant="Variant.Outlined">
-                    </MudTextField>
+                                  Variant="Variant.Outlined"/>
                 </MudItem>
             </CustomLabelAndInput>
             <CustomLabelAndLongField FirstText="Delivery Fees"
-                                     BindValue="@DeliveryFees" BindValueChanged="@((e) => DiscountOrDeliveryFeesValueChanged(e, false))"/>
-
+                                     BindValue="@DeliveryFees" BindValueChanged="@(e => DiscountOrDeliveryFeesValueChanged(e, false))"/>
         </MudGrid>
-        <MudDivider DividerType="DividerType.FullWidth" Class="my-4"></MudDivider>
+        <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
         <MudGrid Spacing="2">
-            <CustomLabelAndLabel FirstText="Total" SecondText="@($"{Total.ToString()} mmk")"></CustomLabelAndLabel>
-            <CustomLabelAndLabel FirstText="Total (With Existing)" SecondText="@($"{GrandTotal.ToString()} mmk")"></CustomLabelAndLabel>
-            <CustomLabelAndLongField
-                FirstText="Paid Total" BindValue="@PaidTotal" BindValueChanged="@TotalPaidValueChanged" Required="true"/>
+            <CustomLabelAndLabel FirstText="Total" SecondText="@($"{Total.ToString()} mmk")"/>
+            <CustomLabelAndLabel FirstText="Total (With Existing)" SecondText="@($"{GrandTotal.ToString()} mmk")"/>
+            <CustomLabelAndLongField FirstText="Paid Total" 
+                                     BindValue="@PaidTotal" BindValueChanged="@TotalPaidValueChanged" Required="true"/>
             <CustomLableAndCheckbox FirstText="Is Paid" @bind-BindValue="IsPaid"/>
         </MudGrid>
-        <MudDivider DividerType="DividerType.FullWidth" Class="my-4"></MudDivider>
+        <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
         <MudGrid Spacing="2">
             <CustomLabelAndLabel FirstText="Total Credit / Debit (Overall)"
                                  SecondText="@_creditDebitLeftString"
-                                 SecondTextColor="@(_totalCreditDebitLeft < 0 ? Color.Error : Color.Dark)">
-            </CustomLabelAndLabel>
+                                 SecondTextColor="@(_totalCreditDebitLeft < 0 ? Color.Error : Color.Dark)"/>
         </MudGrid>
-        <MudDivider DividerType="DividerType.FullWidth" Class="my-4"></MudDivider>
+        <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
         <MudGrid Spacing="2">
             <CustomLabelAndInput FirstText="Remark">
                 <MudItem sm="7" md="7" lg="7" Class="align-self-center">
                     <MudTextField T="string" @bind-Value="Remark"
                                   FullWidth="true" InputType="InputType.Text"
-                                  Margin="Margin.Dense" Variant="Variant.Outlined">
-                    </MudTextField>
+                                  Margin="Margin.Dense" Variant="Variant.Outlined"/>
                 </MudItem>
             </CustomLabelAndInput>
         </MudGrid>
-        <MudDivider DividerType="DividerType.FullWidth" Class="mt-4"></MudDivider>
+        <MudDivider DividerType="DividerType.FullWidth" Class="mt-4"/>
     </DialogContent>
     <DialogActions>
         <CustomButton
