--- a/Friday.ERP.Client/Pages/UserManagement/Dialogs/UserCreateDialog.razor
+++ b/Friday.ERP.Client/Pages/UserManagement/Dialogs/UserCreateDialog.razor
@@ -13,21 +13,21 @@
                     <CustomLabelAndStringField FirstText="Phone" @bind-BindValue="@Phone" Required="true" KeyboardInputType="InputType.Telephone"/>
                     <CustomLabelAndStringField FirstText="Email" @bind-BindValue="@Email" Required="true" KeyboardInputType="InputType.Email"/>
                 </MudGrid>
-                <MudDivider DividerType="DividerType.FullWidth" Class="my-4"></MudDivider>
+                <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
                 <MudGrid Spacing="2">
                     <CustomLabelAndStringField FirstText="Username" @bind-BindValue="@Username" Required="true"/>
                 </MudGrid>
-                <MudDivider DividerType="DividerType.FullWidth" Class="my-4"></MudDivider>
+                <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
                 <MudGrid Spacing="2">
                     <CustomLabelAndFieldPassword FirstText="Password" @bind-BindValue="@Password" Required="true" KeyboardInputType="@_passwordInput"
-                                                        AdornmentIcon="@_passwordInputIcon" OnAdornmentClick="@ShowPassword"/>
+                                                 AdornmentIcon="@_passwordInputIcon" OnAdornmentClick="@ShowPassword"/>
                 </MudGrid>
-                <MudDivider DividerType="DividerType.FullWidth" Class="my-4"></MudDivider>
+                <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
                 <MudGrid Spacing="2">
                     <CustomLableAndAutocomplete FirstText="Role" Required="true" Value="@RoleName" SearchFuncWithCancel="@SearchUserRoles" ValueChanged="@RoleChange"
-                                                       OnClearButtonClick="() => { }"/>
+                                                OnClearButtonClick="() => { }"/>
                 </MudGrid>
-                <MudDivider DividerType="DividerType.FullWidth" Class="my-4"></MudDivider>
+                <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
             </MudForm>
         </DialogContent>
         <DialogActions>
@@ -119,8 +119,10 @@
             {
                 Snackbar.Add("User Created!", Severity.Success);
             }
+
             MudDialog!.Close(DialogResult.Ok(httpResult.isSuccess));
         }
+
         _isLoading = false;
         StateHasChanged();
     }
