--- a/Friday.ERP.Client/Shared/Components/Molecules/CustomLabelAndStringField.razor
+++ b/Friday.ERP.Client/Shared/Components/Molecules/CustomLabelAndStringField.razor
@@ -2,8 +2,8 @@
     <MudItem sm="@SecondSm" md="@SecondMd" Class="align-self-center">
         <MudTextField T="string" @bind-Value="@BindValue" Required="@Required" Immediate="true"
                       FullWidth="true" InputType="@KeyboardInputType"
-                      Margin="Margin.Dense" Variant="Variant.Outlined">
-        </MudTextField>
+                      Margin="Margin.Dense" Variant="Variant.Outlined"/>
+        
     </MudItem>
 </CustomLabelAndInput>
 
