--- a/Friday.ERP.Client/Shared/Components/Molecules/CustomLableAndCheckbox.razor
+++ b/Friday.ERP.Client/Shared/Components/Molecules/CustomLableAndCheckbox.razor
@@ -1,8 +1,7 @@
 <CustomLabelAndInput Sm="@FirstSm" Md="@FirstMd" FirstText="@FirstText" Typo="@Typo">
     <MudItem sm="SecondSm" md="@SecondMd" Class="align-self-center">
         <MudCheckBox T="bool" @bind-Value="@BindValue" Required="@Required" Immediate="true"
-                     Color="Color.Default">
-        </MudCheckBox>
+                     Color="Color.Default"/>
     </MudItem>
 </CustomLabelAndInput>
 
