--- a/Friday.ERP.Client/Shared/Layouts/MainLayout.razor
+++ b/Friday.ERP.Client/Shared/Layouts/MainLayout.razor
@@ -44,7 +44,7 @@
     </MudAppBar>
     <MudDrawer @bind-Open="_drawerOpen" Elevation="1" Variant="DrawerVariant.Mini">
         <MudDrawerHeader>
-            <MudText Typo="Typo.h6"></MudText>
+            <MudText Typo="Typo.h6"/>
         </MudDrawerHeader >
         <NavMenu/>
     </MudDrawer>
